# anonimus-animals

./: .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  index.html
data/: animals.db
http/: requests.http
src/: database.rs  generator.rs  handlers.rs  main.rs  models.rs
