[package]
name = "anonimus-animals"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["std", "alloc", "derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
